--- a/countries.ipynb
+++ b/countries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -63,8 +63,9 @@
          "hovertemplate": "Country=%{location}<br>Count=%{z}<extra></extra>",
          "locationmode": "country names",
          "locations": [
-          "Ireland",
+          "Israel",
           "UK",
+          "Ireland",
           "Sudan",
           "South Sudan",
           "Uganda",
@@ -76,7 +77,6 @@
           "Denmark",
           "Australia",
           "Mali",
-          "Israel",
           "India",
           "Sri Lanka",
           "Bangladesh",
@@ -141,8 +141,9 @@
          "name": "",
          "type": "choropleth",
          "z": [
+          28,
+          203,
           13,
-          202,
           2,
           2,
           1,
@@ -154,7 +155,6 @@
           2,
           19,
           3,
-          27,
           11,
           1,
           1,
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>UK</td>\n",
-       "      <td>202</td>\n",
+       "      <td>203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1174,8 +1174,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>27</td>\n",
+       "      <td>Israel</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1184,22 +1184,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
-       "      <td>Somalia</td>\n",
+       "      <td>North Macedonia</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
-       "      <td>Dominican Republic</td>\n",
+       "      <td>Romania</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
-       "      <td>Dominica</td>\n",
+       "      <td>Bangladesh</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>72</th>\n",
-       "      <td>Ghana</td>\n",
+       "      <td>Sri Lanka</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1213,23 +1213,23 @@
        "</div>"
       ],
       "text/plain": [
-       "               Country  Count\n",
-       "0                   UK    202\n",
-       "1        United States    168\n",
-       "2              Ukraine     88\n",
-       "3               Russia     55\n",
-       "4              Germany     27\n",
-       "..                 ...    ...\n",
-       "69             Somalia      1\n",
-       "70  Dominican Republic      1\n",
-       "71            Dominica      1\n",
-       "72               Ghana      1\n",
-       "73             Albania      1\n",
+       "            Country  Count\n",
+       "0                UK    203\n",
+       "1     United States    168\n",
+       "2           Ukraine     88\n",
+       "3            Russia     55\n",
+       "4            Israel     28\n",
+       "..              ...    ...\n",
+       "69  North Macedonia      1\n",
+       "70          Romania      1\n",
+       "71       Bangladesh      1\n",
+       "72        Sri Lanka      1\n",
+       "73          Albania      1\n",
        "\n",
        "[74 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
