--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,28 +74,52 @@
     "\n",
     "df = pd.DataFrame(data3, columns=columns3)\n",
     "\n",
-    "df['Publication type'] = df['Publication type'].replace(['thesis'], 'Thesis')\n",
-    "df['Publication type'] = df['Publication type'].replace(['journalArticle'], 'Journal article')\n",
-    "df['Publication type'] = df['Publication type'].replace(['book'], 'Book')\n",
-    "df['Publication type'] = df['Publication type'].replace(['bookSection'], 'Book chapter')\n",
-    "df['Publication type'] = df['Publication type'].replace(['blogPost'], 'Blog post')\n",
-    "df['Publication type'] = df['Publication type'].replace(['videoRecording'], 'Video')\n",
-    "df['Publication type'] = df['Publication type'].replace(['podcast'], 'Podcast')\n",
-    "df['Publication type'] = df['Publication type'].replace(['magazineArticle'], 'Magazine article')\n",
-    "df['Publication type'] = df['Publication type'].replace(['webpage'], 'Webpage')\n",
-    "df['Publication type'] = df['Publication type'].replace(['newspaperArticle'], 'Newspaper article')\n",
-    "df['Publication type'] = df['Publication type'].replace(['report'], 'Report')\n",
-    "df['Publication type'] = df['Publication type'].replace(['forumPost'], 'Forum post')\n",
-    "df['Publication type'] = df['Publication type'].replace(['manuscript'], 'Manuscript')\n",
-    "df['Publication type'] = df['Publication type'].replace(['document'], 'Document')\n",
-    "df['Publication type'] = df['Publication type'].replace(['forumPost'], 'Forum post')\n",
-    "df['Publication type'] = df['Publication type'].replace(['conferencePaper'], 'Conference paper')\n",
-    "df['Publication type'] = df['Publication type'].replace(['film'], 'Film')\n",
-    "df['Publication type'] = df['Publication type'].replace(['presentation'], 'Presentation')\n",
+    "mapping_types = {\n",
+    "    'thesis': 'Thesis',\n",
+    "    'journalArticle': 'Journal article',\n",
+    "    'book': 'Book',\n",
+    "    'bookSection': 'Book chapter',\n",
+    "    'blogPost': 'Blog post',\n",
+    "    'videoRecording': 'Video',\n",
+    "    'podcast': 'Podcast',\n",
+    "    'magazineArticle': 'Magazine article',\n",
+    "    'webpage': 'Webpage',\n",
+    "    'newspaperArticle': 'Newspaper article',\n",
+    "    'report': 'Report',\n",
+    "    'forumPost': 'Forum post',\n",
+    "    'manuscript': 'Manuscript',\n",
+    "    'document': 'Document',\n",
+    "    'conferencePaper': 'Conference paper',\n",
+    "    'film': 'Film',\n",
+    "    'presentation': 'Presentation'\n",
+    "}\n",
+    "df['Publication type'] = df['Publication type'].map(mapping_types)\n",
+    "\n",
+    "# mapping_publisher = {\n",
+    "#     'Taylor & Francis Group': 'Taylor and Francis',\n",
+    "#     'Taylor and Francis': 'Taylor and Francis',\n",
+    "#     'Taylor & Francis': 'Taylor and Francis',\n",
+    "#     'Routledge': 'Routledge',\n",
+    "#     'Routledge Handbooks Online': 'Routledge',\n",
+    "#     'Praeger Security International': 'Praeger',\n",
+    "#     'Praeger': 'Praeger'\n",
+    "# }\n",
+    "# df['Publisher'] = df['Publisher'].map(mapping_publisher)\n",
     "\n",
     "df['Publisher'] = df['Publisher'].replace(['Taylor & Francis Group', 'Taylor and Francis', 'Taylor & Francis'], 'Taylor and Francis')\n",
     "df['Publisher'] = df['Publisher'].replace(['Routledge', 'Routledge Handbooks Online'], 'Routledge')\n",
     "df['Publisher'] = df['Publisher'].replace(['Praeger Security International', 'Praeger'], 'Praeger')\n",
+    "\n",
+    "# mapping_journal = {\n",
+    "#     'International Journal of Intelligence and Counterintelligence': 'Intl Journal of Intelligence and Counterintelligence',\n",
+    "#     'International Journal of Intelligence and CounterIntelligence': 'Intl Journal of Intelligence and Counterintelligence',\n",
+    "#     'Intelligence and national security': 'Intelligence and National Security',\n",
+    "#     'Intelligence and National Security': 'Intelligence and National Security',\n",
+    "#     'Intelligence & National Security': 'Intelligence and National Security'\n",
+    "# }\n",
+    "\n",
+    "# df['Journal'] = df['Journal'].map(mapping_journal)\n",
+    "\n",
     "\n",
     "df['Journal'] = df['Journal'].replace(['International Journal of Intelligence and Counterintelligence', 'International Journal of Intelligence and CounterIntelligence'], 'Intl Journal of Intelligence and Counterintelligence')\n",
     "df['Journal'] = df['Journal'].replace(['Intelligence and national security', 'Intelligence and National Security', 'Intelligence & National Security'], 'Intelligence and National Security')"
@@ -103,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
