--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,41 +93,40 @@
     "    'film': 'Film',\n",
     "    'presentation': 'Presentation'\n",
     "}\n",
-    "df['Publication type'] = df['Publication type'].map(mapping_types)\n",
+    "df['Publication type'] = df['Publication type'].replace(mapping_types)\n",
     "\n",
-    "# mapping_publisher = {\n",
-    "#     'Taylor & Francis Group': 'Taylor and Francis',\n",
-    "#     'Taylor and Francis': 'Taylor and Francis',\n",
-    "#     'Taylor & Francis': 'Taylor and Francis',\n",
-    "#     'Routledge': 'Routledge',\n",
-    "#     'Routledge Handbooks Online': 'Routledge',\n",
-    "#     'Praeger Security International': 'Praeger',\n",
-    "#     'Praeger': 'Praeger'\n",
-    "# }\n",
-    "# df['Publisher'] = df['Publisher'].map(mapping_publisher)\n",
+    "mapping_publisher = {\n",
+    "    'Taylor & Francis Group': 'Taylor and Francis',\n",
+    "    'Taylor and Francis': 'Taylor and Francis',\n",
+    "    'Taylor & Francis': 'Taylor and Francis',\n",
+    "    'Routledge': 'Routledge',\n",
+    "    'Routledge Handbooks Online': 'Routledge',\n",
+    "    'Praeger Security International': 'Praeger',\n",
+    "    'Praeger': 'Praeger'\n",
+    "}\n",
+    "df['Publisher'] = df['Publisher'].replace(mapping_publisher)\n",
     "\n",
-    "df['Publisher'] = df['Publisher'].replace(['Taylor & Francis Group', 'Taylor and Francis', 'Taylor & Francis'], 'Taylor and Francis')\n",
-    "df['Publisher'] = df['Publisher'].replace(['Routledge', 'Routledge Handbooks Online'], 'Routledge')\n",
-    "df['Publisher'] = df['Publisher'].replace(['Praeger Security International', 'Praeger'], 'Praeger')\n",
+    "# df['Publisher'] = df['Publisher'].replace(['Taylor & Francis Group', 'Taylor and Francis', 'Taylor & Francis'], 'Taylor and Francis')\n",
+    "# df['Publisher'] = df['Publisher'].replace(['Routledge', 'Routledge Handbooks Online'], 'Routledge')\n",
+    "# df['Publisher'] = df['Publisher'].replace(['Praeger Security International', 'Praeger'], 'Praeger')\n",
     "\n",
-    "# mapping_journal = {\n",
-    "#     'International Journal of Intelligence and Counterintelligence': 'Intl Journal of Intelligence and Counterintelligence',\n",
-    "#     'International Journal of Intelligence and CounterIntelligence': 'Intl Journal of Intelligence and Counterintelligence',\n",
-    "#     'Intelligence and national security': 'Intelligence and National Security',\n",
-    "#     'Intelligence and National Security': 'Intelligence and National Security',\n",
-    "#     'Intelligence & National Security': 'Intelligence and National Security'\n",
-    "# }\n",
+    "mapping_journal = {\n",
+    "    'International Journal of Intelligence and Counterintelligence': 'Intl Journal of Intelligence and Counterintelligence',\n",
+    "    'International Journal of Intelligence and CounterIntelligence': 'Intl Journal of Intelligence and Counterintelligence',\n",
+    "    'Intelligence and national security': 'Intelligence and National Security',\n",
+    "    'Intelligence and National Security': 'Intelligence and National Security',\n",
+    "    'Intelligence & National Security': 'Intelligence and National Security'\n",
+    "}\n",
     "\n",
-    "# df['Journal'] = df['Journal'].map(mapping_journal)\n",
+    "df['Journal'] = df['Journal'].replace(mapping_journal)\n",
     "\n",
-    "\n",
-    "df['Journal'] = df['Journal'].replace(['International Journal of Intelligence and Counterintelligence', 'International Journal of Intelligence and CounterIntelligence'], 'Intl Journal of Intelligence and Counterintelligence')\n",
-    "df['Journal'] = df['Journal'].replace(['Intelligence and national security', 'Intelligence and National Security', 'Intelligence & National Security'], 'Intelligence and National Security')"
+    "# df['Journal'] = df['Journal'].replace(['International Journal of Intelligence and Counterintelligence', 'International Journal of Intelligence and CounterIntelligence'], 'Intl Journal of Intelligence and Counterintelligence')\n",
+    "# df['Journal'] = df['Journal'].replace(['Intelligence and national security', 'Intelligence and National Security', 'Intelligence & National Security'], 'Intelligence and National Security')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
