--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -1,17 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 62,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# pip install pyzotero"
+    "# Importing libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +23,13 @@
     "from datetime import date, timedelta  \n",
     "import datetime\n",
     "import plotly.express as px\n",
-    "# import shillelagh.contrib.gspread as gspread\n"
+    "import pycountry\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,13 +160,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2\n",
     "from sqlalchemy import create_engine\n",
     "import psycopg2.extras as extras"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Countries "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read the csv file into a pandas dataframe\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/YusufAliOzkan/zotero-intelligence-bibliography/main/all_items.csv')\n",
+    "\n",
+    "# Dictionary to map non-proper country names to their proper names\n",
+    "country_map = {\n",
+    "    'british': 'UK',\n",
+    "    'great britain': 'UK',\n",
+    "    'UK' : 'UK', \n",
+    "    'america' : 'United States',\n",
+    "    'United States of America' : 'United States',\n",
+    "    'Soviet Union': 'Russia', \n",
+    "    'american' : 'United States',\n",
+    "    'United States' : 'United States',\n",
+    "    'russian' : 'Russia'\n",
+    "    # Add more mappings as needed\n",
+    "}\n",
+    "\n",
+    "# Find the country names in the \"title\" column of the dataframe\n",
+    "found_countries = {}\n",
+    "for i, row in df.iterrows():\n",
+    "    title = str(row['Title']).lower()\n",
+    "    for country in pycountry.countries:\n",
+    "        name = country.name.lower()\n",
+    "        if name in title or (name + 's') in title:  # Check for singular and plural forms of country names\n",
+    "            proper_name = country.name\n",
+    "            found_countries[proper_name] = found_countries.get(proper_name, 0) + 1\n",
+    "    for non_proper, proper in country_map.items():\n",
+    "        if non_proper in title:\n",
+    "            found_countries[proper] = found_countries.get(proper, 0) + title.count(non_proper)\n",
+    "\n",
+    "# Create a new dataframe containing the found countries and their counts\n",
+    "df_countries = pd.DataFrame({'Country': list(found_countries.keys()), 'Count': list(found_countries.values())})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.choropleth(df_countries, locations='Country', locationmode='country names', color='Count', \n",
+    "                    title='Country mentions in titles', color_continuous_scale='Viridis',\n",
+    "                    width=1100, height=700) # Adjust the size of the map here\n",
+    "\n",
+    "# Display the map\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_countries=df_countries.sort_values(by='Count', ascending=False)\n",
+    "df_countries.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_countries.to_csv('countries.csv',index=False)"
    ]
   }
  ],
