--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1586,79 +1586,58 @@
        "      <td>62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Iraq</td>\n",
-       "      <td>39</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Israel</td>\n",
-       "      <td>38</td>\n",
+       "      <th>417</th>\n",
+       "      <td>Northern Ireland’s</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>France</td>\n",
-       "      <td>34</td>\n",
+       "      <th>418</th>\n",
+       "      <td>Crete</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>London</td>\n",
-       "      <td>34</td>\n",
+       "      <th>419</th>\n",
+       "      <td>NtK</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>33</td>\n",
+       "      <th>420</th>\n",
+       "      <td>Nukes</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>China</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Moscow</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Turkey</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Washington</td>\n",
-       "      <td>19</td>\n",
+       "      <th>421</th>\n",
+       "      <td>1937–38</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>422 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           GPE  count\n",
-       "0          USA    333\n",
-       "1           UK    268\n",
-       "2       Russia    173\n",
-       "3      Ukraine    147\n",
-       "4      Germany     62\n",
-       "5         Iraq     39\n",
-       "6       Israel     38\n",
-       "7       France     34\n",
-       "8       London     34\n",
-       "9       Canada     33\n",
-       "10       China     28\n",
-       "11   Australia     22\n",
-       "12      Moscow     21\n",
-       "13      Turkey     20\n",
-       "14  Washington     19"
+       "                    GPE  count\n",
+       "0                   USA    333\n",
+       "1                    UK    268\n",
+       "2                Russia    173\n",
+       "3               Ukraine    147\n",
+       "4               Germany     62\n",
+       "..                  ...    ...\n",
+       "417  Northern Ireland’s      1\n",
+       "418               Crete      1\n",
+       "419                 NtK      1\n",
+       "420               Nukes      1\n",
+       "421             1937–38      1\n",
+       "\n",
+       "[422 rows x 2 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,6 +2011,17 @@
     "org_counts = org_counts.reset_index(drop=True)\n",
     "\n",
     "org_counts.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpe_counts.head(15).to_csv('gpe.csv')\n",
+    "person_counts.head(15).to_csv('person.csv')\n",
+    "org_counts.head(15).to_csv('org.csv')"
    ]
   }
  ],
