--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1730,27 +1730,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Joe Biden</td>\n",
+       "      <td>John le Carré</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Joe Biden</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
        "      <td>Michael Morell</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>Loch K. Johnson</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>John le Carré’s</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Stalin</td>\n",
+       "      <td>Bush</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1760,7 +1760,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Bush</td>\n",
+       "      <td>Stalin</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1770,22 +1770,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Gen Hayden</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
        "      <td>Edward Snowden</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>12</th>\n",
        "      <td>Gorbachev</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>David Priess</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>Christopher Andrew</td>\n",
+       "      <td>Gen Hayden</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1793,25 +1793,25 @@
        "</div>"
       ],
       "text/plain": [
-       "                PERSON  count\n",
-       "0       Vladimir Putin     52\n",
-       "1    Winston Churchill     15\n",
-       "2         Adolf Hitler     14\n",
-       "3            Joe Biden     10\n",
-       "4       Michael Morell      9\n",
-       "5      Loch K. Johnson      8\n",
-       "6      John le Carré’s      7\n",
-       "7               Stalin      6\n",
-       "8          David Omand      6\n",
-       "9                 Bush      6\n",
-       "10          James Bond      6\n",
-       "11          Gen Hayden      5\n",
-       "12      Edward Snowden      5\n",
-       "13           Gorbachev      5\n",
-       "14  Christopher Andrew      5"
+       "               PERSON  count\n",
+       "0      Vladimir Putin     52\n",
+       "1   Winston Churchill     15\n",
+       "2        Adolf Hitler     14\n",
+       "3       John le Carré     10\n",
+       "4           Joe Biden     10\n",
+       "5      Michael Morell      9\n",
+       "6     Loch K. Johnson      8\n",
+       "7                Bush      6\n",
+       "8         David Omand      6\n",
+       "9              Stalin      6\n",
+       "10         James Bond      6\n",
+       "11     Edward Snowden      5\n",
+       "12          Gorbachev      5\n",
+       "13       David Priess      5\n",
+       "14         Gen Hayden      5"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1830,7 +1830,8 @@
     "    'Vladimir Putin' : 'Vladimir Putin',\n",
     "    'Churchill' : 'Winston Churchill',\n",
     "    'Hitler' : 'Adolf Hitler',\n",
-    "    'Biden' : 'Joe Biden'\n",
+    "    'Biden' : 'Joe Biden',\n",
+    "    \"John le Carré’s\" : \"John le Carré\"\n",
     "}\n",
     "\n",
     "person_counts['PERSON'] =person_counts['PERSON'].replace(mapping_person)\n",
@@ -1847,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1908,18 +1909,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Allied</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
        "      <td>Schar School of Policy and Government</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
        "      <td>Joint Intelligence Committee</td>\n",
-       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Allied</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1938,12 +1939,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>George Mason University</td>\n",
+       "      <td>Intelligence Services</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>Intelligence Services</td>\n",
+       "      <td>George Mason University</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1963,18 +1964,18 @@
        "3                                     FBI     21\n",
        "4                          Foreign Office     18\n",
        "5                    British Intelligence     17\n",
-       "6                                  Allied     16\n",
-       "7   Schar School of Policy and Government     16\n",
-       "8            Joint Intelligence Committee     15\n",
+       "6   Schar School of Policy and Government     16\n",
+       "7            Joint Intelligence Committee     16\n",
+       "8                                  Allied     16\n",
        "9                                     NSA     15\n",
        "10                                    SOE     14\n",
        "11                                   NATO     12\n",
-       "12                George Mason University      9\n",
-       "13                  Intelligence Services      9\n",
+       "12                  Intelligence Services      9\n",
+       "13                George Mason University      9\n",
        "14                                     EU      8"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2000,7 +2001,8 @@
     "    'the Foreign Office' : 'Foreign Office',\n",
     "    'Schar School' : 'Schar School of Policy and Government',\n",
     "    'the Secret Intelligence Service' : 'SIS',\n",
-    "    \"George Mason University's\" : \"George Mason University\"\n",
+    "    \"George Mason University's\" : \"George Mason University\",\n",
+    "    'JIC' : 'Joint Intelligence Committee'\n",
     "}\n",
     "org_counts['ORG'] =org_counts['ORG'].replace(mapping_organisations)\n",
     "org_counts = org_counts.groupby('ORG').sum().reset_index()\n",
@@ -2015,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
